# am-osx-status

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  deny.toml
.sqlx/: query-29a82b93b14899800cc2ece63ab65d90467410d6d6ae618ab097a183e82b6588.json  query-718c4862ee8b9231e62ba19aefab6e2b7923f5906838740b0b090cb7652754a8.json  query-81a29b10c2022849ffa7c11af135028f947d958ca9f4cca727fba1d784b56a98.json  query-aa4827564c9635cc87add0552e0130de237cf734de6413b35b37d7b7b3f29b9b.json  query-c623eac9fa696e190c84c80c25364d9f3d4dd315674ba1dfdb0872872e8ac3ce.json  query-d3a769491addabee72576d2b5281c54e2f8ffb58286418af385de60ca092cb4f.json
LICENSES/: BSD-3-Clause.txt
crates/brainz/: Cargo.toml
crates/brainz/crates/cover-art-archive/: Cargo.toml
crates/brainz/crates/cover-art-archive/src/: lib.rs
crates/brainz/crates/listenbrainz/: Cargo.toml
crates/brainz/crates/listenbrainz/src/: constants.rs  lib.rs
crates/brainz/crates/listenbrainz/src/v1/: error.rs  mod.rs  submit_listens.rs
crates/brainz/crates/musicbrainz/: Cargo.toml
crates/brainz/crates/musicbrainz/src/: id.rs  lib.rs  request_client.rs
crates/brainz/crates/musicbrainz/src/entities/: alias.rs  artist.rs  mod.rs  recording.rs
crates/brainz/crates/shared/: Cargo.toml
crates/brainz/crates/shared/src/: lib.rs
crates/brainz/src/: lib.rs
crates/itunes_api/: Cargo.toml
crates/itunes_api/src/: lib.rs
crates/lastfm/: Cargo.toml
crates/lastfm/src/: auth.rs  error.rs  lib.rs  parameters.rs  scrobble.rs
crates/maybe_owned_string/: Cargo.toml
crates/maybe_owned_string/src/: lib.rs
crates/musicdb/: Cargo.toml  README.md
crates/musicdb/patterns/: README.md  compressed.hexpat  decompressed.hexpat  mac-time.hexpat
crates/musicdb/src/: boma.rs  chunk.rs  cli.rs  encoded.rs  id.rs  lib.rs  main.rs  packed.rs  units.rs  utf16.rs  version.rs
crates/musicdb/src/chunks/: account.rs  album.rs  artist.rs  collection.rs  mod.rs  track.rs
crates/mzstatic/: Cargo.toml  README.md  saga.txt
crates/mzstatic/src/: accelerator.rs  lib.rs  pool.rs
crates/mzstatic/src/image/: effect.rs  mod.rs  quality.rs
crates/osa_apple_music/: Cargo.toml  README.md
crates/osa_apple_music/non-rust/: env.d.ts  server.js  test.js  tsconfig.json
crates/osa_apple_music/non-rust/debug/: README.md  stress_test.c  test.c
crates/osa_apple_music/src/: application.rs  lib.rs  track.rs
crates/osascript/: Cargo.toml  README.md
crates/osascript/src/: balanced.rs  lib.rs  repl.rs  session.rs
crates/plist/: Cargo.toml
crates/plist/src/: lib.rs  serde.rs
crates/unaligned_u16/: Cargo.toml
crates/unaligned_u16/fuzz/: Cargo.toml
crates/unaligned_u16/fuzz/targets/: cmp.rs  eq.rs
crates/unaligned_u16/src/: endian.rs  lib.rs  utf16.rs
crates/xml/: Cargo.toml  README.md
crates/xml/src/: arena.rs  cdata.rs  defs.rs  lib.rs  span.rs
dev/: build-universal.sh  cc-check.sh  db-backup.sh  db-init.sh  db-make-migration.sh  db-sqlx-prepare.sh  doc-internal.sh  generate-info-plist.sh  setup-workspace.sh
src/: cli.rs  debugging.rs  error_layer.rs  listened.rs  main.rs  util.rs
src/config/: file.rs  mod.rs  wizard.rs
src/config/versions/: latest.rs  mod.rs
src/data_fetching/: mod.rs
src/data_fetching/components/: artwork.rs  image.rs  mod.rs
src/data_fetching/services/: apple_music.rs  artworkd.rs  itunes.rs  mod.rs  musicdb.rs  spotify.rs
src/data_fetching/services/custom_artwork_host/: catbox.rs  litterbox.rs  mod.rs
src/service/: definition.plist.template  ipc.rs  lockfile.rs  mod.rs
src/status_backend/: discord.rs  lastfm.rs  listenbrainz.rs  mod.rs
src/store/: entities.rs  migrations.rs  mod.rs  test_utilities.rs  timestamp.rs  types.rs
src/store/debug/: dump.rs  mod.rs
src/store/sql/migrations/1:init/: down.sql  up.sql
src/store/sql/migrations/2:fetch-caches/: down.sql
src/store/sql/migrations/3:migration-id/: down.sql  up.sql
src/store/sql/migrations/4:int-persistent-ids/: down.sql  up.sql
src/store/sql/migrations/5:nullable-uncensored-and-timestamp/: down.sql  up.sql
src/store/sql/migrations/67BF546A-init/: down.sql  up.sql
src/store/sql/migrations/68C732E9-fixed-data-find-better-name-for-ts/: up.sql
src/store/sql/seeding/: initial.sql
src/subscribers/: discord.rs  lastfm.rs  listenbrainz.rs  mod.rs
