[workspace]
members = ["crates/*", "crates/brainz/crates/*"]
exclude = ["crates/unaligned_u16/fuzz"]

[package]
name = "am-osx-status"
version = "0.0.0"
edition = "2024"
repository = "https://github.com/homomorphist/am-osx-status"

[dependencies]
async-trait = "0.1.83"
brainz = { path = "./crates/brainz/", optional = true }
catbox = { version = "0.8.2", optional = true }
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["cargo", "derive"] }
console-subscriber = "0.4.0"
discord-presence = { version = "1.5.0", features = ["activity_type"], optional = true }
lastfm = { path = "./crates/lastfm", optional = true }
maybe_owned_string = { path = "./crates/maybe_owned_string/" }
musicdb = { path = "./crates/musicdb/", features = ["tracing"], optional = true }
mzstatic = { path = "./crates/mzstatic/" }
reqwest = "0.12.7"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.128"
service-manager = "0.7.1"
strum = { version = "0.26.3", features = ["derive"] }
sysinfo = { version = "0.31.4", default-features = false, features = ["component", "system", "user"] }
thiserror = "1.0.64"
tokio = { version = "1", features = ["full", "tracing"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.18"
unicode-normalization = "0.1.24"
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"], default-features = false }
bincode = "1.3.3"
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
tokio-serde = { version = "0.9.0", features = ["bincode"] }
osa_apple_music = { path = "./crates/osa_apple_music", features = ["sqlx"] }
futures-util = "0.3.31"
itunes_api = { path = "./crates/itunes_api" }
include_dir = "0.7.4"
cast_trait_object = "0.1.4"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite", "macros", "derive", "chrono"] }
backtrace = "0.3.74"

[features]
default = ["all"]
all = ["discord", "listenbrainz", "lastfm", "catbox", "musicdb"]
discord = ["dep:discord-presence"]
listenbrainz = ["dep:brainz"]
lastfm = ["dep:lastfm"]
catbox = ["dep:catbox"]
musicdb = ["dep:musicdb"]
tokio_console = []

[profile.dev.package.sqlx]
opt-level = 3

[profile.test.package.sqlx]
opt-level = 3

