[package]
name = "itunes_api"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.11"
mzstatic = { path = "../mzstatic" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
