[package]
name = "lastfm"
version = "0.1.0"
edition = "2021"

[dependencies]
md5 = "0.7.0"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.9"
maybe_owned_string = { path = "../maybe_owned_string/", features = ["serde"]}
chrono = "0.4.39"
brainz = { path = "../brainz/" }
serde_json = "1.0.134"
tokio = "1.42.0"
