[package]
name = "listenbrainz"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
musicbrainz = { path = "../musicbrainz/" }
cover-art-archive = { path = "../cover-art-archive/" }
chrono = { version = "0.4.39", default-features = false, features = ["alloc"] }
reqwest = "0.12.9"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
maybe_owned_string = { path = "../../../maybe_owned_string", features = ["serde"] }
async-trait = "0.1.83"
http = "1.2.0"
tokio = { version = "1.42.0", features = ["full"] }
thiserror = "2.0.10"

[features]
raw = []

